Add etcd-operator subproject to sig-etcd
Signed-off-by: Andrei Kvapil <kvapss@gmail.com>

--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -126,6 +126,7 @@ channels:
   - name: emea-users
   - name: eraser
   - name: es-users
+  - name: etcd-operator
   - name: etcdadm
   - name: evented-pleg
   - name: events
