Add sig-api-machinery-storageversion-dev channel
For discussions around:

https://github.com/kubernetes/enhancements/issues/2339
https://github.com/kubernetes/enhancements/issues/4192

--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -443,6 +443,7 @@ channels:
   - name: shoutouts
   - name: sig-api-machinery
   - name: sig-api-machinery-cel-dev
+  - name: sig-api-machinery-storageversion-dev
   - name: sig-apps
   - name: sig-auth
   - name: sig-auth-authenticators-dev
