Fix Kevin's github handle

--- a/sigs.yaml
+++ b/sigs.yaml
@@ -3367,7 +3367,7 @@ workinggroups:
     - github: johnbelamaric
       name: John Belamaric
       company: Google
-    - github: kklues
+    - github: klueska
       name: Kevin Klues
       company: NVIDIA
     - github: pohly
