Add terraform-kops slack channel.

--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -510,6 +510,7 @@ channels:
   - name: tanzu-community-edition
     archived: true
   - name: tanzu-streaming-runtimes
+  - name: terraform-kops
   - name: terraform-providers
   - name: terranetes
   - name: test-failures
