adding wg-serving channel ahead of approval to enable conversation early

--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -543,6 +543,7 @@ channels:
   - name: wg-apply
     archived: true
   - name: wg-batch
+  - name: wg-serving
   - name: wg-component-standard
     archived: true
   - name: wg-component-standard-mentorship
