--- a/sigs.yaml
+++ b/sigs.yaml
@@ -3076,10 +3076,10 @@ sigs:
     chairs:
     - github: floreks
       name: Sebastian Florek
-      company: Kubermatic
+      company: Plural
     - github: maciaszczykm
       name: Marcin Maciaszczyk
-      company: Kubermatic
+      company: Plural
     - github: shu-mutou
       name: Shu Muto
       company: NEC
@@ -3089,11 +3089,8 @@ sigs:
     - github: jeefy
       name: Jeffrey Sica
   meetings:
-  - description: Regular SIG Meeting
-    day: Thursday
-    time: "09:00"
-    tz: PT (Pacific Time)
-    frequency: bi-weekly
+  - description: SIG Meeting
+    frequency: on demand
     url: https://groups.google.com/forum/#!forum/kubernetes-sig-ui
     archive_url: https://docs.google.com/document/d/1PwHFvqiShLIq8ZpoXvE3dSUnOv1ts5BTtZ7aATuKd-E/edit?usp=sharing
     recordings_url: https://www.youtube.com/watch?v=r3pL8i3wPhk&list=PL69nYSiGNLP35H5MZbg9OU6pqpfWgtbLm
@@ -3106,7 +3103,6 @@ sigs:
   subprojects:
   - name: dashboard
     owners:
-    - https://raw.githubusercontent.com/kubernetes-sigs/dashboard-metrics-scraper/master/OWNERS
     - https://raw.githubusercontent.com/kubernetes/dashboard/master/OWNERS
 - dir: sig-windows
   name: Windows
