Update sigs.yaml for wg-policy chair changes (#7643)
* Update sigs.yaml for wg-policy chair changes

wg-policy would like to add 2 new co-chairs

* generated from make generate per instructions

* Update sigs.yaml

added emeritus_leads per guidance

* Update sigs.yaml

apparently emeritus doesn't allow company field so I go incognito

* generated from make generate per instructions and emeritus change

--- a/sigs.yaml
+++ b/sigs.yaml
@@ -3412,9 +3412,15 @@ workinggroups:
     - github: JimBugwadia
       name: Jim Bugwadia
       company: Kyverno/Nirmata
+    - github: poonam-lamba
+      name: Poonam Lamba
+      company: Google
+    - github: sudermanjr
+      name: Andy Suderman
+      company: Fairwinds
+    emeritus_leads:
     - github: rficcaglia
       name: Robert Ficcaglia
-      company: SunStone
   meetings:
   - description: Regular WG Meeting
     day: Wednesday
