--- a/sigs.yaml
+++ b/sigs.yaml
@@ -575,6 +575,11 @@ sigs:
       mailing_list: https://groups.google.com/forum/#!forum/kubernetes-secrets-store-csi-driver
     owners:
     - https://raw.githubusercontent.com/kubernetes-sigs/secrets-store-csi-driver/master/OWNERS
+  - name: secrets-store-sync-controller
+    description: |
+      This is a Kubernetes controller that watches for changes to a custom resource and syncs the secrets from external secrets-store as Kubernetes secret.
+    owners:
+    - https://raw.githubusercontent.com/kubernetes-sigs/secrets-store-sync-controller/main/OWNERS
   - name: service-accounts
     description: |
       Infrastructure implementing Kubernetes service account based workload identity.
