added a playlist for WG Serving

--- a/sigs.yaml
+++ b/sigs.yaml
@@ -3521,7 +3521,7 @@ workinggroups:
     frequency: weekly
     url: https://zoom.us/j/93517402529?pwd=RnkwUUQ4L3J2QmNYYlNBcnZGbXcvQT09
     archive_url: https://docs.google.com/document/d/1aExJFtaLnO-TM6_2uILgI8NI0IjOm7FcwLABBKEMEo0/edit
-    recordings_url: https://www.youtube.com/playlist?list=TODO
+    recordings_url: https://www.youtube.com/playlist?list=PL69nYSiGNLP30qNanabU75ayPK7OPNAAS
   contact:
     slack: wg-serving
     mailing_list: https://groups.google.com/a/kubernetes.io/g/wg-serving
