add ThatsMrTalbot to the cert-manager-maintainers group on the Kubernetes Slack.

--- a/communication/slack-config/usergroups.yaml
+++ b/communication/slack-config/usergroups.yaml
@@ -318,6 +318,7 @@ usergroups:
       - irbekrm
       - sgtcodfish
       - inteon
+      - ThatsMrTalbot
 
   - name: gophercloud-maintainers
     long_name: Gophercloud Maintainers
