--- a/communication/slack-config/users.yaml
+++ b/communication/slack-config/users.yaml
@@ -256,6 +256,7 @@ users:
   tallclair: U64VCBURE
   TaoBeier: UCLDV6MN1
   tejal29: UACD7R316
+  ThatsMrTalbot: U7QBP08LR
   theishshah: U01891A4TRS
   thejoycekung: U01AY4VHX25
   thepetk: U04NW4PPY8N
