docs: add salaxander as SIG docs tech lead
Signed-off-by: Xander Grzywinski <xandergrzyw@gmail.com>

--- a/sigs.yaml
+++ b/sigs.yaml
@@ -1543,6 +1543,9 @@ sigs:
     - github: tengqm
       name: Qiming Teng
       company: Sangfor Technologies
+    - github: salaxander
+      name: Xander Grzywinski
+      company: Defense Unicorns
     emeritus_leads:
     - github: Bradamant3
       name: Jennifer Rondeau
