docs: update salaxander affiliation
Signed-off-by: Xander Grzywinski <xandergrzyw@gmail.com>

--- a/sigs.yaml
+++ b/sigs.yaml
@@ -3550,7 +3550,7 @@ committees:
       company: Microsoft
     - github: salaxander
       name: Xander Grzywinski
-      company: Microsoft
+      company: Defense Unicorns
     emeritus_leads:
     - github: AevaOnline
       name: Aeva Black
