Adds Kat Cosgrove as tech lead

--- a/sigs.yaml
+++ b/sigs.yaml
@@ -1540,6 +1540,12 @@ sigs:
     - github: salaxander
       name: Xander Grzywinski
       company: Defense Unicorns
+    - github: katcosgrove
+      name: Kat Cosgrove
+      company: Dell Technologies
+    - github: sftim
+      name: Tim Bannister
+      company: The Scale Factory
     - github: tengqm
       name: Qiming Teng
       company: Sangfor Technologies
