add new docs tech leads, tim to emeritus

--- a/sigs.yaml
+++ b/sigs.yaml
@@ -1537,31 +1537,36 @@ sigs:
       name: Rey Lejano
       company: Red Hat
     tech_leads:
-    - github: sftim
-      name: Tim Bannister
-      company: The Scale Factory
+    - github: katcosgrove
+      name: Kat Cosgrove
+      company: Dell Technologies
     - github: tengqm
       name: Qiming Teng
       company: Sangfor Technologies
+    - github: salaxander
+      name: Xander Grzywinski
+      company: Defense Unicorns
     emeritus_leads:
-    - github: Bradamant3
-      name: Jennifer Rondeau
     - github: chenopis
       name: Andrew Chen
     - github: irvifa
       name: Irvi Aini
     - github: jaredbhatti
       name: Jared Bhatti
+    - github: Bradamant3
+      name: Jennifer Rondeau
     - github: jimangel
       name: Jim Angel
     - github: kbarnard10
       name: Kaitlyn Barnard
     - github: kbhawkey
       name: Karen Bradshaw
+    - github: zacharysarah
+      name: Sarah Corleissen
     - github: onlydole
       name: Taylor Dolezal
-    - github: zacharysarah
-      name: Zach Corleissen
+    - github: sftim
+      name: Tim Bannister
   meetings:
   - description: APAC SIG Meeting
     day: Wednesday
