forgot to revert change to xander's company

--- a/sigs.yaml
+++ b/sigs.yaml
@@ -3554,7 +3554,7 @@ committees:
       company: Microsoft
     - github: salaxander
       name: Xander Grzywinski
-      company: Defense Unicorns
+      company: Microsoft
     emeritus_leads:
     - github: AevaOnline
       name: Aeva Black
