--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -321,7 +321,7 @@ channels:
   - name: litmus-dev
   - name: lokomotive
     archived: true
-  - name: lula
+  - name: lula-dev
   - name: magnum-cluster-api
   - name: malaysia-users
   - name: malta-users
