add slack channel for lula project (#7907)
* add slack channel for lula project

* update name

--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -321,6 +321,7 @@ channels:
   - name: litmus-dev
   - name: lokomotive
     archived: true
+  - name: lula-dev
   - name: magnum-cluster-api
   - name: malaysia-users
   - name: malta-users
