update sig-storage meeting and annual report 2023

--- a/sigs.yaml
+++ b/sigs.yaml
@@ -2864,13 +2864,20 @@ sigs:
     - github: childsb
       name: Bradley Childs
   meetings:
-  - description: Regular CSI Implementation meeting
-    day: Monday and Wednesday
+  - description: Regular CSI Implementation Meeting
+    day: Monday
     time: "10:00"
     tz: PT (Pacific Time)
     frequency: weekly
     url: https://zoom.us/j/614261834
     archive_url: https://docs.google.com/document/d/1_hvq3nleqQEYatH9V_Gfep39jMzaFJRSN2ioA0PFq-Q/edit#
+  - description: Regular SIG Issue Triage Meeting
+    day: Wednesday
+    time: "10:00"
+    tz: PT (Pacific Time)
+    frequency: weekly
+    url: https://zoom.us/j/614261834
+    archive_url: https://docs.google.com/document/d/1n-dXXvCbHsPfO1yrKwT1qoC80KhsxHYKbRdChdzqeXY/edit)
   - description: Regular SIG Meeting
     day: Thursday
     time: "9:00"
