--- a/communication/slack-config/users.yaml
+++ b/communication/slack-config/users.yaml
@@ -63,6 +63,7 @@ users:
   divya-mohan0209: UV4J7K97Z
   dntosas: UKT4D74F3
   dougm: U8GG20UE9
+  drewhagen: U01NTKZDPLK
   elezar: ULV21K3CH
   elsony: UCW8323KL
   EmilienM: U01BVTA83D4
@@ -172,6 +173,7 @@ users:
   mjlshen: UN08SUPPD
   mkorbi: UEBLUUA0P
   mohammedzee1000: U3PFFE8CD
+  MohammadRezaSaleh: U02GM9ZLELB
   MonzElmasry: U018U96HYDQ
   mrbobbytables: U511ZSKHD
   mspreitz: U0E40F05R
@@ -227,6 +229,7 @@ users:
   sadysnaat: UNQPKAQHE
   salaxander: UDHV1RXB2
   sammy: U8NJFL023
+  SanchitaMishra: D070H9QF2M9
   sandipanpanda: U02A47HJ517
   SaranBalaji90: U6PNPSULW
   saschagrunert: U53SUDBD4
