update mrbobbytables affiliation

--- a/sigs.yaml
+++ b/sigs.yaml
@@ -3684,7 +3684,7 @@ committees:
       company: Cisco
     - github: mrbobbytables
       name: Bob Killen
-      company: Google
+      company: Cloud Native Computing Foundation
     - github: pacoxu
       name: Paco Xu 徐俊杰
       company: DaoCloud
