--- a/sigs.yaml
+++ b/sigs.yaml
@@ -1725,7 +1725,7 @@ sigs:
     archive_url: https://docs.google.com/document/d/16XEGyPBisZvmmoIHSZzv__LoyOeluC5a4x353CX0SIM/edit
     recordings_url: https://www.youtube.com/playlist?list=PLRGL688DpO9oz7rXy7ZwRS1hvgfEc7qOr
   contact:
-    slack: etcd
+    slack: sig-etcd
     mailing_list: https://groups.google.com/g/etcd-dev
     teams:
     - name: sig-etcd-leads
