Add cluster-api-ionoscloud to Slack
Signed-off-by: Jonas Riedel <jonas.riedel@ionos.com>

--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -71,6 +71,7 @@ channels:
     archived: true
   - name: cluster-api-gcp
   - name: cluster-api-ibmcloud
+  - name: cluster-api-ionoscloud
   - name: cluster-api-k3s
   - name: cluster-api-kubemark
   - name: cluster-api-kubevirt
