Fix docs blog readme
Signed-off-by: Anshuman Tripathi <anshuman.tripathi305@gmail.com>

Use relative link

Signed-off-by: Anshuman Tripathi <anshuman.tripathi305@gmail.com>

Revert "Use relative link"

This reverts commit 02a9f8d9a8c02959fed089d573a7ecdf98b69155.

Use relative link

Signed-off-by: Anshuman Tripathi <anshuman.tripathi305@gmail.com>

Update sig-docs readme

Signed-off-by: Anshuman Tripathi <anshuman.tripathi305@gmail.com>

Revert "Update sig-docs readme"

This reverts commit 60b0f799646bf8e583844b076d22ad2ad4a0c85b.

Fix readme through sigs.yaml

Signed-off-by: Anshuman Tripathi <anshuman.tripathi305@gmail.com>

--- a/sigs.yaml
+++ b/sigs.yaml
@@ -1662,9 +1662,15 @@ sigs:
   - name: reference-docs
     owners:
     - https://raw.githubusercontent.com/kubernetes-sigs/reference-docs/master/OWNERS
+  - name: subproject-definition
+    owners:
+    - https://raw.githubusercontent.com/kubernetes/community/master/governance.md#subprojects
   - name: website
     owners:
     - https://raw.githubusercontent.com/kubernetes/website/master/OWNERS
+  - name: working-group-definition
+    owners:
+    - https://raw.githubusercontent.com/kubernetes/community/master/governance.md#working-groups
 - dir: sig-etcd
   name: etcd
   mission_statement: >
