--- a/communication/slack-config/sig-network/config.yaml
+++ b/communication/slack-config/sig-network/config.yaml
@@ -2,3 +2,5 @@ channels:
   - name: sig-network-gateway-api
     id: CR0H13KGA
   - name: sig-network-policy-api
+  - name: sig-network-kpng
+    archived: true
