Adding new YouTube Admin Chad M. Crowell

--- a/communication/slack-config/usergroups.yaml
+++ b/communication/slack-config/usergroups.yaml
@@ -89,6 +89,7 @@ usergroups:
       - chrisshort
       - pnbrown
       - CIPHERTron
+      - chadmcrowell
 
   - name: zoom-admins
     long_name: Zoom Admins
