--- a/communication/slack-config/users.yaml
+++ b/communication/slack-config/users.yaml
@@ -40,6 +40,7 @@ users:
   cdrage: U2TU9NPH9
   CecileRobertMichon: U98JPHB2M
   cfryanr: U0188B6J42H
+  chadmcrowell: UC4J73YCR
   chandankumar4: U01QKVBNMSL
   chiukapoor: U045T4QQUE6
   chrischdi: UBVL9Q4TB
