Update regular meeting schedule url for WG etcd-operator
Signed-off-by: Benjamin Wang <benjamin.ahrtr@gmail.com>

--- a/sigs.yaml
+++ b/sigs.yaml
@@ -3386,8 +3386,8 @@ workinggroups:
       company: Google
   meetings:
   - description: Regular WG Meeting
-    day: TBD
-    time: TBD
+    day: Tuesday
+    time: "11:00"
     tz: PT (Pacific Time)
     frequency: bi-weekly
     url: https://zoom.us/my/cncfetcdproject
