--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -553,6 +553,7 @@ channels:
   - name: wg-data-protection
   - name: wg-device-management
     id: C0409NGC1TK
+  - name: wg-etcd-operator
   - name: wg-iot-edge
   - name: sig-k8s-infra
     id: CCK68P2Q2
