Add wg-etcd-operator to Slack
Signed-off-by: Andrei Kvapil <kvapss@gmail.com>

--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -545,6 +545,7 @@ channels:
   - name: wg-apply
     archived: true
   - name: wg-batch
+  - name: wg-etcd-operator
   - name: wg-serving
   - name: wg-component-standard
     archived: true
