arch: Add wg-serving subproject

--- a/sigs.yaml
+++ b/sigs.yaml
@@ -396,6 +396,9 @@ sigs:
       slack: prod-readiness
     owners:
     - https://raw.githubusercontent.com/kubernetes/community/master/sig-architecture/OWNERS
+  - name: wg-serving
+    owners:
+    - https://raw.githubusercontent.com/kubernetes-sigs/wg-serving/main/OWNERS
 - dir: sig-auth
   name: Auth
   mission_statement: >
