add slack chennel sre-learning-platform

--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -502,6 +502,7 @@ channels:
   - name: spark-operator
   - name: spinnaker
   - name: sre
+  - name: sre-learning-platform
   - name: steering-committee
   - name: submariner
   - name: surveys
