correct druid-operator-maintainers UIDs

--- a/communication/slack-config/users.yaml
+++ b/communication/slack-config/users.yaml
@@ -1,7 +1,7 @@
 # This file contains an alphabetically sorted mapping of lowercase GitHub
 # usernames to Kubernetes Slack user IDs.
 users:
-  adheipsingh: T09NY5SBT
+  adheipsingh: U02HS73S804
   adilGhaffarDev: U038BLZPX1S
   adisky: U9YRVLTEH
   adityabhatia: U04N6JTDK39
