--- a/communication/slack-config/users.yaml
+++ b/communication/slack-config/users.yaml
@@ -33,7 +33,7 @@ users:
   byako: U03GZBD4J4C
   cahillsf: U04TNKBE92R
   calebamiles: U1ZDD4CUR
-  camilamacedo86: UJDM393EH
+  camilamacedo86: U042UFD8LQK
   castrojo: U1W1Q6PRQ
   catblade: URCV5RDSB
   cblecker: U3EDWR9FV
