docs: update company for shaneutt
Signed-off-by: Shane Utt <shaneutt@linux.com>

--- a/sigs.yaml
+++ b/sigs.yaml
@@ -2152,7 +2152,7 @@ sigs:
       company: Microsoft
     - github: shaneutt
       name: Shane Utt
-      company: Kong
+      company: Red Hat
     - github: thockin
       name: Tim Hockin
       company: Google
