--- a/sigs.yaml
+++ b/sigs.yaml
@@ -3406,11 +3406,11 @@ workinggroups:
     tz: PT (Pacific Time)
     frequency: bi-weekly
     url: https://zoom.us/my/cncfetcdproject
-    archive_url: TBD
+    archive_url: https://docs.google.com/document/d/1ey4zTTRvtCVJJP2vjF95VjG-sAKlNTcqB2HdmC18Lfc/edit
     recordings_url: TBD
   contact:
     slack: wg-etcd-operator
-    mailing_list: https://groups.google.com/u/1/g/etcd-dev
+    mailing_list: https://groups.google.com/a/kubernetes.io/g/wg-etcd-operator
     liaison:
       github: soltysh
       name: Maciej Szulik
