--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -171,6 +171,7 @@ channels:
   - name: hephy-users
     id: C678BMZ89
   - name: hetzner
+  - name: hmc-dev
   - name: homelab
   - name: hydrophone
   - name: id-events
