--- a/communication/slack-config/users.yaml
+++ b/communication/slack-config/users.yaml
@@ -42,6 +42,7 @@ users:
   cfryanr: U0188B6J42H
   chadmcrowell: UC4J73YCR
   chandankumar4: U01QKVBNMSL
+  chanieljdan: U04BYV58N87
   chiukapoor: U045T4QQUE6
   chrischdi: UBVL9Q4TB
   chrisshort: U2YGXSD9B
@@ -64,6 +65,7 @@ users:
   divya-mohan0209: UV4J7K97Z
   dntosas: UKT4D74F3
   dougm: U8GG20UE9
+  drewhagen: U01NTKZDPLK
   elezar: ULV21K3CH
   elsony: UCW8323KL
   EmilienM: U01BVTA83D4
@@ -159,6 +161,7 @@ users:
   mattmoyer: U0DRP8H42
   maysunfaisal: U01DEHK2YUB
   mbbroberg: U18JTHMDY
+  mbianchidev: UU1JM5G5A
   mcbenjemaa: UF111SQ4U
   meatballhat: U01QEKCBTBM
   mehabhalodiya: U024HPAQDC1
@@ -185,6 +188,7 @@ users:
   nitishfy: U03AB2YFVGV
   Nivedita-coder: U01H4FQJ3RP
   nkubala: UA90QL2BE
+  npolshakova: U048GQET6MR
   nprokopic: UR434B8TS
   nrb: U7S597E00
   nzoueidi: UBU72MWP2
@@ -226,10 +230,12 @@ users:
   s-urbaniak: U0DT660QM
   sadysnaat: UNQPKAQHE
   salaxander: UDHV1RXB2
+  salehsedghpour: U02GM9ZLELB
   sammy: U8NJFL023
   sandipanpanda: U02A47HJ517
   SaranBalaji90: U6PNPSULW
   saschagrunert: U53SUDBD4
+  satyampsoni: U04DUM62MDY
   savitharaghunathan: UC8U2V3BM
   sayantani11: U028S6XNVSN
   sbueringer: U48TE1L75
@@ -260,6 +266,7 @@ users:
   theishshah: U01891A4TRS
   thejoycekung: U01AY4VHX25
   thepetk: U04NW4PPY8N
+  tjons: U05H23DAZTP
   tobiasgiese: U01C1NM8D8F
   tpepper: U6UB5V4TX
   troy0820: U3D457W7M
@@ -273,6 +280,7 @@ users:
   vincepri: UCD11GCET
   vishalanarase: U02GX4DHBUM
   vladimirmukhin: UHVSCSD4G
+  Vyom-Yadav: U03658QBE1K
   vzhukovs: U030TR1FG85
   wallrj: U1ZMERJF7
   willie-yao: U024EME7SQK
