add kubearchive slack channel
Signed-off-by: skoved <skoved@redhat.com>

--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -265,6 +265,7 @@ channels:
   - name: kubeadm
   - name: kubeadm-cn
   - name: kubeapps
+  - name: kubearchive
   - name: kubebuilder
   - name: kubecon
   - name: kubecfg
