--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -5,7 +5,7 @@ on:
   # Runs on pushes targeting the default branch
   push:
     branches:
-      - 8021
+      - main
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
