Add channel #loxilb
loxilb has been voted to be a sandbox project. 
Please refer https://github.com/cncf/toc/issues/1409

--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -324,6 +324,7 @@ channels:
   - name: litmus-dev
   - name: lokomotive
     archived: true
+  - name: loxilb
   - name: lula-dev
   - name: magnum-cluster-api
   - name: malaysia-users
