add new cert-manager maintainer erikgb to the slack usergroup
Signed-off-by: Tim Ramlot <42113979+inteon@users.noreply.github.com>

--- a/communication/slack-config/usergroups.yaml
+++ b/communication/slack-config/usergroups.yaml
@@ -306,7 +306,7 @@ usergroups:
       - cert-manager-dev
       - cert-manager
     # To get that list, run the following:
-    #  curl https://raw.githubusercontent.com/cert-manager/cert-manager/master/OWNERS | yq .approvers
+    #  curl https://raw.githubusercontent.com/cert-manager/community/main/maintainers.csv
     # Note that you will then need to find your Slack User ID (look up in Stackoverflow)
     # and copy it to the users.yaml file in this repository.
     members:
@@ -318,6 +318,7 @@ usergroups:
       - sgtcodfish
       - inteon
       - ThatsMrTalbot
+      - erikgb
 
   - name: gophercloud-maintainers
     long_name: Gophercloud Maintainers
