--- a/communication/slack-config/users.yaml
+++ b/communication/slack-config/users.yaml
@@ -70,6 +70,7 @@ users:
   elsony: UCW8323KL
   EmilienM: U01BVTA83D4
   enj: U2T4CVDTJ
+  erikgb: U015W0NF962
   erismaster: U0162FJ79LY
   estroz: UKSEANEC9
   ezra: U8UN4DC4T
