[steering 2024] add voters from approved exception request - sept 10

--- a/elections/steering/2024/voters.yaml
+++ b/elections/steering/2024/voters.yaml
@@ -17,6 +17,7 @@
 # 2024-08-26 - Add voters from approved exception requests
 # 2024-08-28 - Add voters from approved exception requests
 # 2024-08-30 - Add voters from approved exception requests
+# 2024-09-10 - Add voters from approved exception requests
 #
 eligible_voters:
 - a-mccarthy
@@ -74,6 +75,7 @@ eligible_voters:
 - ArkaSaha30
 - arkodg
 - aroradaman
+- ArvindParekh
 - aryan9600
 - asa3311
 - asem-hamid
