slack: add channel kty

--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -248,6 +248,7 @@ channels:
   - name: krew
   - name: krex
   - name: krustlet
+  - name: kty
   - name: kuadrant
   - name: kube-aws
   - name: kube-bind
