Add SimKube to Slack Channels

--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -498,6 +498,7 @@ channels:
     archived: true
   - name: sig-windows
   - name: sig-windows-leads
+  - name: simkube
   - name: skaffold
   - name: slack-admins
   - name: slack-infra
