Adding sandeepkanabar to Slack Announcebot
Signed-off-by: Chris "Not So" Short <cbshort@amazon.com>

--- a/communication/slack-config/usergroups.yaml
+++ b/communication/slack-config/usergroups.yaml
@@ -38,6 +38,7 @@ usergroups:
       - natalisucks
       - nitishfy
       - paris
+      - sandeepkanabar
       - sandipanpanda
       - sreeram-venkitesh
 
