--- a/communication/slack-config/users.yaml
+++ b/communication/slack-config/users.yaml
@@ -234,6 +234,7 @@ users:
   salehsedghpour: U02GM9ZLELB
   sammy: U8NJFL023
   sandipanpanda: U02A47HJ517
+  sandeepkanabar: U042H6CU0BW
   SaranBalaji90: U6PNPSULW
   saschagrunert: U53SUDBD4
   satyampsoni: U04DUM62MDY
