Onboarding Cailyn Edwards as SIG Security chair!

--- a/sigs.yaml
+++ b/sigs.yaml
@@ -2767,6 +2767,9 @@ sigs:
     - github: IanColdwater
       name: Ian Coldwater
       company: Docker
+    - github: cailynse
+      name: Cailyn Edwards
+      company: Octa
     - github: tabbysable
       name: Tabitha Sable
       company: Datadog
