Add kubectl.nvim to the channel.yaml

--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -269,6 +269,7 @@ channels:
   - name: kubebuilder
   - name: kubecon
   - name: kubecfg
+  - name: kubectl-nvim
   - name: kubectl-trace
   - name: kubectl-validate
   - name: kubedb
