steering: Onboard/offboard members following 2024 election results
Add:
- Antonio Ojea
- Sascha Grunert

Emeritus:
- Bob Killen
- Nabarun Pal

Signed-off-by: Stephen Augustus <foo@auggie.dev>

--- a/communication/slack-config/usergroups.yaml
+++ b/communication/slack-config/usergroups.yaml
@@ -192,12 +192,12 @@ usergroups:
     channels:
       - steering-committee
     members:
+      - aojea
       - bentheelder
       - justaugustus
-      - mrbobbytables
       - pacoxu
-      - palnabarun
       - pohly
+      - saschagrunert
       - soltysh
 
   - name: grafana-operator-maintainers
