--- a/communication/slack-config/users.yaml
+++ b/communication/slack-config/users.yaml
@@ -17,6 +17,7 @@ users:
   anjaltelang: U028B09KZ5X
   ankeesler: UBAA1KQ4A
   annajung: U8SLB1P2Q
+  aojea: U7CK9A960
   aravindputrevu: U1G27SDU6
   asmacdo: UNVH7RY9J
   Atharva-Shinde: U028J67T478
